--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0198.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0198.html
@@ -2516,9 +2516,14 @@
             <ins class="alt" title="nlp 1.00">ἐπὶ</ins>
           </span>
         </span>
-        <span id="w_486" class="ocr_word" title="bbox 1588 3199 1673 3243">
+        <span id="w_486_0" class="ocr_word" title="bbox 1588 3199 1673 3243">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;ι΄&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&lt;ι'&gt;</ins>
+          </span>
+        </span>
+        <span id="w_486_1" class="ocr_word" title="bbox 1588 3199 1673 3243">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_487" class="ocr_word" title="bbox 1819 3200 1862 3235">
@@ -2529,12 +2534,6 @@
         <span id="w_488" class="ocr_word" title="bbox 1891 3213 2082 3247" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">ποιήσωμεν</ins>
-          </span>
-        </span>
-        <span id="w_489" class="ocr_word" title="bbox 2099 3201 2127 3234">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">K</ins>
-            <del title="nlp 0.90">K</del>
           </span>
         </span>
       </span>
