--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0275.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0275.html
@@ -530,9 +530,9 @@
             <ins class="alt" title="nlp 1.00">παρωνύμως</ins>
           </span>
         </span>
-        <span id="w_101" class="ocr_word" title="bbox 1700 706 1816 744" lang="grc">
+        <span id="w_101_0" class="ocr_word" title="bbox 1700 706 1816 744">
           <span class="alternatives">
-            <ins title="nlp 2.00">χατηγορεῖται</ins>
+            <ins class="alt" title="nlp 2.00">κατηγορεῖται</ins>
           </span>
         </span>
       </span>
@@ -676,9 +676,14 @@
             <ins class="alt" title="nlp 1.00">δὲ</ins>
           </span>
         </span>
-        <span id="w_130" class="ocr_word" title="bbox 444 894 524 950">
+        <span id="w_130_0" class="ocr_word" title="bbox 444 894 524 950">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;οὐ&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;οὐ&amp;#x003Ε;</ins>
+          </span>
+        </span>
+        <span id="w_130_1" class="ocr_word" title="bbox 444 894 524 950">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_131" class="ocr_word" title="bbox 555 898 710 948" lang="grc">
@@ -719,11 +724,6 @@
         <span id="w_138" class="ocr_word" title="bbox 1584 913 1655 952" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">γὰρ</ins>
-          </span>
-        </span>
-        <span id="w_139" class="ocr_word" title="bbox 1689 900 1813 938" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">αὐτῶν</ins>
           </span>
         </span>
       </span>
@@ -1125,7 +1125,7 @@
         </span>
         <span id="w_217" class="ocr_word" title="bbox 939 1578 1112 1632" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ἐνανία</ins>
+            <ins title="nlp 2.00">ἐνανία</ins>
           </span>
         </span>
         <span id="w_218" class="ocr_word" title="bbox 1144 1594 1213 1632" lang="grc">
@@ -2052,14 +2052,14 @@
             <del title="nlp 0.90">an</del>
           </span>
         </span>
-        <span id="w_397" class="ocr_word" title="bbox 1684 2649 1755 2688" lang="grc">
+        <span id="w_397_0" class="ocr_word" title="bbox 1684 2649 1755 2688">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;χαὶ</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;καὶ</ins>
           </span>
         </span>
-        <span id="w_398" class="ocr_word" title="bbox 1781 2659 1884 2692" lang="grc">
+        <span id="w_397_1" class="ocr_word" title="bbox 1684 2649 1755 2688">
           <span class="alternatives">
-            <ins title="nlp 2.00">χατηγοροῦνται&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -2249,14 +2249,14 @@
             <del title="nlp 0.90">p.</del>
           </span>
         </span>
-        <span id="w_436" class="ocr_word" title="bbox 1412 2825 1534 2863" lang="grc">
+        <span id="w_436_0" class="ocr_word" title="bbox 1412 2825 1534 2863">
           <span class="alternatives">
-            <ins title="nlp 2.00">151,13—156,13</ins>
+            <ins class="alt" title="nlp 2.00">151,13—156,13</ins>
           </span>
         </span>
-        <span id="w_437" class="ocr_word" title="bbox 1727 2823 1884 2867" lang="grc">
+        <span id="w_436_1" class="ocr_word" title="bbox 1412 2825 1534 2863">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τέταρτον</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -2682,7 +2682,7 @@
         </span>
         <span id="w_516" class="ocr_word" title="bbox 1512 3174 1543 3207">
           <span class="alternatives">
-            <ins title="nlp 2.00">HP 31 οὐδὲν Η</ins>
+            <ins title="nlp 2.00">οὐδὲν Η</ins>
           </span>
         </span>
       </span>
