--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0048.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0048.html
@@ -1871,9 +1871,9 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_367" class="ocr_word" title="bbox 2109 2147 2143 2173">
+        <span id="w_367_0" class="ocr_word" title="bbox 2109 2147 2143 2173">
           <span class="alternatives">
-            <ins title="nlp 2.00">30</ins>
+            <ins class="alt" title="nlp 2.00">20</ins>
           </span>
         </span>
       </span>
@@ -2450,7 +2450,7 @@
       <span class="ocr_line" title="bbox 349 2797 2117 2848">
         <span id="w_479" class="ocr_word" title="bbox 349 2800 370 2834" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">8ῇ] ἢ</ins>
+            <ins title="nlp 2.00">ῇ] ἢ</ins>
           </span>
         </span>
         <span id="w_480" class="ocr_word" title="bbox 477 2800 550 2832">
@@ -2471,8 +2471,7 @@
         </span>
         <span id="w_483" class="ocr_word" title="bbox 761 2810 826 2833">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">cm.</ins>
-            <del title="nlp 0.90">cm.</del>
+            <ins title="nlp 2.00">om.</ins>
           </span>
         </span>
         <span id="w_484" class="ocr_word" title="bbox 842 2800 886 2832">
@@ -2697,17 +2696,17 @@
       <span class="ocr_line" title="bbox 356 2971 2165 3026">
         <span id="w_525" class="ocr_word" title="bbox 356 2975 392 3006" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">17 ἐν Θεκιτήτῳ] p. 176 A. B </ins>
+            <ins title="nlp 2.00">ἐν Θεκιτήτῳ] p. 176 A. B </ins>
           </span>
         </span>
         <span id="w_526" class="ocr_word" title="bbox 1009 2975 1049 3007" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">19 ἐν Θαίδωνι] p. 64 A. 67 E</ins>
+            <ins title="nlp 2.00">ἐν Θαίδωνι] p. 64 A. 67 E</ins>
           </span>
         </span>
         <span id="w_527" class="ocr_word" title="bbox 1677 2979 1717 3012" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">19 ἐν τῇ Μετὰ φυσικά]</ins>
+            <ins title="nlp 2.00">ἐν τῇ Μετὰ φυσικά]</ins>
           </span>
         </span>
       </span>
@@ -2908,8 +2907,7 @@
         </span>
         <span id="w_564" class="ocr_word" title="bbox 1956 3097 2074 3129">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">tIxtov</ins>
-            <del title="nlp 0.90">tIxtov</del>
+            <ins title="nlp 2.00">τέκτον</ins>
           </span>
         </span>
         <span id="w_565" class="ocr_word" title="bbox 2093 3096 2118 3129">
@@ -2987,8 +2985,7 @@
         </span>
         <span id="w_578" class="ocr_word" title="bbox 1580 3153 1612 3186">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">II</ins>
-            <del title="nlp 0.90">II</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span id="w_579" class="ocr_word" title="bbox 1640 3153 1706 3187">
