--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0276.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0276.html
@@ -387,9 +387,14 @@
             <ins class="alt" title="nlp 1.00">εἴδει,</ins>
           </span>
         </span>
-        <span id="w_73" class="ocr_word" title="bbox 1278 601 1395 657">
+        <span id="w_73_0" class="ocr_word" title="bbox 1278 601 1395 657">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;οἶον&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;οἷον&amp;#x003Ε;</ins>
+          </span>
+        </span>
+        <span id="w_73_1" class="ocr_word" title="bbox 1278 601 1395 657">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_74" class="ocr_word" title="bbox 1424 617 1479 645" lang="grc">
@@ -415,11 +420,6 @@
         <span id="w_78" class="ocr_word" title="bbox 1841 619 1897 644" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τῷ</ins>
-          </span>
-        </span>
-        <span id="w_79" class="ocr_word" title="bbox 1934 603 2147 657" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀνθρώπῳ.</ins>
           </span>
         </span>
       </span>
@@ -560,7 +560,7 @@
         </span>
         <span id="w_106" class="ocr_word" title="bbox 462 812 646 865" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γίνονται</ins>
+            <ins title="nlp 2.00">(γίνονται</ins>
           </span>
         </span>
         <span id="w_107" class="ocr_word" title="bbox 692 827 764 864" lang="grc">
