--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0138.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0138.html
@@ -1840,9 +1840,9 @@
             <ins class="alt" title="nlp 1.00">λευκὸν</ins>
           </span>
         </span>
-        <span id="w_361" class="ocr_word" title="bbox 2064 2277 2145 2313">
+        <span id="w_361_0" class="ocr_word" title="bbox 2064 2277 2145 2313">
           <span class="alternatives">
-            <ins title="nlp 2.00">102ν</ins>
+            <ins class="alt" title="nlp 2.00">102v</ins>
           </span>
         </span>
       </span>
