--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0199.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0199.html
@@ -1961,9 +1961,14 @@
             <ins class="alt" title="nlp 1.00">ποσοῦται</ins>
           </span>
         </span>
-        <span id="w_381" class="ocr_word" title="bbox 531 2266 624 2321">
+        <span id="w_381_0" class="ocr_word" title="bbox 531 2266 624 2321">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;εἶθ᾿ </ins>
+            <ins class="alt" title="nlp 2.00">&lt;εἶθ᾿</ins>
+          </span>
+        </span>
+        <span id="w_381_1" class="ocr_word" title="bbox 531 2266 624 2321">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_382" class="ocr_word" title="bbox 670 2281 792 2309" lang="grc">
@@ -1971,9 +1976,14 @@
             <ins class="alt" title="nlp 1.00">οὕτως</ins>
           </span>
         </span>
-        <span id="w_383" class="ocr_word" title="bbox 826 2262 1034 2318" lang="grc">
+        <span id="w_383_0" class="ocr_word" title="bbox 826 2262 1034 2318">
           <span class="alternatives">
-            <ins title="nlp 2.00">ποιοῦται&amp;#x003E;,</ins>
+            <ins class="alt" title="nlp 2.00">ποιοῦται&gt;,</ins>
+          </span>
+        </span>
+        <span id="w_383_1" class="ocr_word" title="bbox 826 2262 1034 2318">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_384" class="ocr_word" title="bbox 1072 2279 1196 2318" lang="grc">
@@ -1999,16 +2009,6 @@
         <span id="w_388" class="ocr_word" title="bbox 1559 2264 1625 2301" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
-          </span>
-        </span>
-        <span id="w_389" class="ocr_word" title="bbox 1664 2276 1758 2314" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πρός</ins>
-          </span>
-        </span>
-        <span id="w_390" class="ocr_word" title="bbox 1795 2275 1827 2299" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τι</ins>
           </span>
         </span>
       </span>
