--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0200.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0200.html
@@ -256,8 +256,7 @@
         </span>
         <span id="w_45" class="ocr_word" title="bbox 620 525 626 578">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">I</ins>
-            <del title="nlp 0.90">I</del>
+            <ins title="nlp 2.00">|</ins>
           </span>
         </span>
         <span id="w_46" class="ocr_word" title="bbox 652 527 775 578" lang="grc">
@@ -744,19 +743,19 @@
             <ins class="alt" title="nlp 1.00">θερμαίνει,</ins>
           </span>
         </span>
-        <span id="w_140" class="ocr_word" title="bbox 1779 1014 1907 1070">
+        <span id="w_140_0" class="ocr_word" title="bbox 1779 1014 1907 1070">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;ἀλλ᾿&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&lt;ἀλλ᾿&gt;</ins>
+          </span>
+        </span>
+        <span id="w_140_1" class="ocr_word" title="bbox 1779 1014 1907 1070">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_141" class="ocr_word" title="bbox 1930 1031 1973 1055" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">οὐ</ins>
-          </span>
-        </span>
-        <span id="w_142" class="ocr_word" title="bbox 1995 1015 2096 1056" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καθὸ</ins>
           </span>
         </span>
       </span>
