--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0277.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0277.html
@@ -1163,9 +1163,14 @@
             <ins class="alt" title="nlp 1.00">τριγώνου</ins>
           </span>
         </span>
-        <span id="w_225" class="ocr_word" title="bbox 875 1434 955 1489">
+        <span id="w_225_0" class="ocr_word" title="bbox 875 1434 955 1489">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;οὐ&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;οὐ&amp;#x003Ε;</ins>
+          </span>
+        </span>
+        <span id="w_225_1" class="ocr_word" title="bbox 875 1434 955 1489">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_226" class="ocr_word" title="bbox 977 1437 1126 1488" lang="grc">
@@ -1186,11 +1191,6 @@
         <span id="w_229" class="ocr_word" title="bbox 1524 1449 1547 1487" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἢ</ins>
-          </span>
-        </span>
-        <span id="w_230" class="ocr_word" title="bbox 1566 1448 1803 1488" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τετράγωνον</ins>
           </span>
         </span>
       </span>
@@ -1376,7 +1376,7 @@
         </span>
         <span id="w_266" class="ocr_word" title="bbox 1269 1641 1399 1693" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οὐδὲν</ins>
+            <ins title="nlp 2.00">(οὐδὲν</ins>
           </span>
         </span>
         <span id="w_267" class="ocr_word" title="bbox 1430 1641 1501 1694" lang="grc">
@@ -2112,14 +2112,12 @@
         </span>
         <span id="w_409" class="ocr_word" title="bbox 642 2554 704 2579">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">xov</ins>
-            <del title="nlp 0.90">xov</del>
+            <ins title="nlp 2.00">τὸν</ins>
           </span>
         </span>
         <span id="w_410" class="ocr_word" title="bbox 738 2554 870 2593">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ofxoiov</ins>
-            <del title="nlp 0.90">ofxoiov</del>
+            <ins title="nlp 2.00">ὁμοῖον</ins>
           </span>
         </span>
         <span id="w_411" class="ocr_word" title="bbox 902 2538 986 2591">
@@ -2441,7 +2439,7 @@
         </span>
         <span id="w_469" class="ocr_word" title="bbox 1603 3097 1646 3130" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">. . ] Ηοm. ρ 218 37 παῦροτ . . ]</ins>
+            <ins title="nlp 2.00">Ηοm. ρ 218 37 παῦροτ . . ]</ins>
           </span>
         </span>
       </span>
