--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0049.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0049.html
@@ -108,16 +108,11 @@
         </span>
         <span id="w_18" class="ocr_word" title="bbox 1802 280 1863 319" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δυ-</ins>
+            <ins title="nlp 2.00">δυνατὸν</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 193 347 1919 404">
-        <span id="w_19" class="ocr_word" title="bbox 193 368 300 394" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">νατὸν</ins>
-          </span>
-        </span>
         <span id="w_20" class="ocr_word" title="bbox 333 348 565 404" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">ἀνθρώπῳ’·</ins>
@@ -484,12 +479,7 @@
         </span>
         <span id="w_91" class="ocr_word" title="bbox 1049 838 1132 878" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀλλ’</ins>
-          </span>
-        </span>
-        <span id="w_92" class="ocr_word" title="bbox 1146 870 1155 885">
-          <span class="alternatives">
-            <ins title="nlp 2.00">,</ins>
+            <ins class="alt" title="nlp 2.00">ἀλλ’,</ins>
           </span>
         </span>
         <span id="w_93" class="ocr_word" title="bbox 1188 840 1219 879">
@@ -700,9 +690,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 191 1113 1870 1168">
-        <span id="w_133" class="ocr_word" title="bbox 191 1120 283 1159">
+        <span id="w_133_0" class="ocr_word" title="bbox 191 1120 283 1159">
           <span class="alternatives">
-            <ins title="nlp 2.00">"ποῦ</ins>
+            <ins class="alt" title="nlp 2.00">῾ποῦ</ins>
+          </span>
+        </span>
+        <span id="w_133_1" class="ocr_word" title="bbox 191 1120 283 1159">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_134" class="ocr_word" title="bbox 317 1133 421 1157" lang="grc">
@@ -727,7 +722,7 @@
         </span>
         <span id="w_138" class="ocr_word" title="bbox 850 1113 857 1129" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">"?οπου</ins>
+            <ins title="nlp 2.00">οπου</ins>
           </span>
         </span>
         <span id="w_139" class="ocr_word" title="bbox 999 1113 1133 1161" lang="grc">
@@ -753,11 +748,6 @@
         <span id="w_143" class="ocr_word" title="bbox 1658 1129 1730 1153" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ποῦ</ins>
-          </span>
-        </span>
-        <span id="w_144" class="ocr_word" title="bbox 1765 1129 1870 1166" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μένει</ins>
           </span>
         </span>
       </span>
@@ -1731,7 +1721,7 @@
         </span>
         <span id="w_334" class="ocr_word" title="bbox 481 2299 654 2350" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">εὐτελὲς</ins>
+            <ins title="nlp 2.00">(εὐτελὲς</ins>
           </span>
         </span>
         <span id="w_335" class="ocr_word" title="bbox 677 2297 746 2352" lang="grc">
@@ -1977,8 +1967,7 @@
         </span>
         <span id="w_382" class="ocr_word" title="bbox 1897 2507 1933 2532">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">so</ins>
-            <del title="nlp 0.90">so</del>
+            <ins title="nlp 2.00">30</ins>
           </span>
         </span>
       </span>
@@ -2067,9 +2056,14 @@
             <ins class="alt" title="nlp 1.00">εἶτα</ins>
           </span>
         </span>
-        <span id="w_399" class="ocr_word" title="bbox 639 2756 729 2800">
+        <span id="w_399_0" class="ocr_word" title="bbox 639 2756 729 2800">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;x003C;τὴν&amp;x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;τὴν&amp;#x003E;</ins>
+          </span>
+        </span>
+        <span id="w_399_1" class="ocr_word" title="bbox 639 2756 729 2800">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_400" class="ocr_word" title="bbox 755 2755 770 2788">
@@ -2124,11 +2118,6 @@
         <span id="w_409" class="ocr_word" title="bbox 1807 2746 1829 2779">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">4</ins>
-          </span>
-        </span>
-        <span id="w_410" class="ocr_word" title="bbox 1860 2747 1950 2790" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οὐχὶ]</ins>
           </span>
         </span>
       </span>
@@ -2244,8 +2233,7 @@
         </span>
         <span id="w_430" class="ocr_word" title="bbox 190 2872 305 2917">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">taxpot]</ins>
-            <del title="nlp 0.90">taxpot</del>
+            <ins title="nlp 2.00">ἰατροί]</ins>
           </span>
         </span>
         <span id="w_431" class="ocr_word" title="bbox 333 2885 457 2918" lang="grc">
@@ -2557,8 +2545,7 @@
       <span class="ocr_line" title="bbox 146 3094 1905 3149">
         <span id="w_487" class="ocr_word" title="bbox 146 3102 278 3137">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">TiXatcuv</ins>
-            <del title="nlp 0.90">TiXatcuv</del>
+            <ins title="nlp 2.00">πλάτων</ins>
           </span>
         </span>
         <span id="w_488" class="ocr_word" title="bbox 306 3106 330 3138">
@@ -2646,8 +2633,7 @@
         </span>
         <span id="w_503" class="ocr_word" title="bbox 289 3164 426 3209">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">apyeiP</ins>
-            <del title="nlp 0.90">apyeiP</del>
+            <ins title="nlp 2.00">ἄρχει</ins>
           </span>
         </span>
         <span id="w_504" class="ocr_word" title="bbox 453 3165 667 3208">
@@ -2729,10 +2715,14 @@
             <del title="nlp 0.90">an</del>
           </span>
         </span>
-        <span id="w_518" class="ocr_word" title="bbox 700 3224 795 3263">
+        <span id="w_518_0" class="ocr_word" title="bbox 700 3224 795 3263">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">(otov)</ins>
-            <del title="nlp 0.90">(otov</del>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;οἷον&amp;#x003E;</ins>
+          </span>
+        </span>
+        <span id="w_518_1" class="ocr_word" title="bbox 700 3224 795 3263">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_519" class="ocr_word" title="bbox 823 3221 880 3254" lang="grc">
@@ -2776,11 +2766,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">Hippol.</ins>
             <del title="nlp 0.90">Hippol.</del>
-          </span>
-        </span>
-        <span id="w_527" class="ocr_word" title="bbox 1746 3212 1814 3245">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">772</ins>
           </span>
         </span>
       </span>
