--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0139.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0139.html
@@ -284,9 +284,14 @@
             <ins class="alt" title="nlp 1.00">5</ins>
           </span>
         </span>
-        <span id="w_52" class="ocr_word" title="bbox 831 681 1028 738" lang="grc">
+        <span id="w_52_0" class="ocr_word" title="bbox 831 681 1028 738">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;Πρᾶξις λη΄&amp;#x003Ε;.</ins>
+            <ins class="alt" title="nlp 2.00">&amp;003C;Πρᾶξις</ins>
+          </span>
+        </span>
+        <span id="w_52_1" class="ocr_word" title="bbox 831 681 1028 738">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">λη'&amp;003E;.</ins>
           </span>
         </span>
       </span>
@@ -1585,9 +1590,9 @@
             <ins class="alt" title="nlp 1.00">τὸ</ins>
           </span>
         </span>
-        <span id="w_306" class="ocr_word" title="bbox 1658 2365 1792 2418" lang="grc">
+        <span id="w_306_0" class="ocr_word" title="bbox 1658 2365 1792 2418">
           <span class="alternatives">
-            <ins title="nlp 2.00">103ν</ins>
+            <ins class="alt" title="nlp 2.00">103v</ins>
           </span>
         </span>
       </span>
