--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0351.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0351.html
@@ -1111,9 +1111,14 @@
         </span>
       </span>
       <span title="bbox 54 1442 1867 1499" class="ocr_line">
-        <span lang="grc" title="bbox 54 1443 138 1499" class="ocr_word" id="w_213">
+        <span id="w_213_0" class="ocr_word" title="bbox 54 1443 138 1499">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;οὐχ</ins>
+            <ins class="alt" title="nlp 2.00">&lt;οὐκ</ins>
+          </span>
+        </span>
+        <span id="w_213_1" class="ocr_word" title="bbox 54 1443 138 1499">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span lang="grc" title="bbox 167 1444 240 1499" class="ocr_word" id="w_214">
@@ -1126,9 +1131,14 @@
             <ins title="nlp 1.00" class="alt">τὴν</ins>
           </span>
         </span>
-        <span lang="grc" title="bbox 371 1444 517 1499" class="ocr_word" id="w_216">
+        <span id="w_216_0" class="ocr_word" title="bbox 371 1444 517 1499">
           <span class="alternatives">
-            <ins title="nlp 2.00">ψυχὴν&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">ψυχὴν&gt;</ins>
+          </span>
+        </span>
+        <span id="w_216_1" class="ocr_word" title="bbox 371 1444 517 1499">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span lang="grc" title="bbox 549 1446 605 1485" class="ocr_word" id="w_217">
@@ -1159,16 +1169,6 @@
         <span lang="grc" title="bbox 1385 1458 1512 1498" class="ocr_word" id="w_222">
           <span class="alternatives">
             <ins title="nlp 1.00" class="alt">σῶμα,</ins>
-          </span>
-        </span>
-        <span lang="grc" title="bbox 1551 1442 1629 1484" class="ocr_word" id="w_223">
-          <span class="alternatives">
-            <ins title="nlp 1.00" class="alt">ἀλλ’</ins>
-          </span>
-        </span>
-        <span lang="grc" title="bbox 1668 1443 1867 1484" class="ocr_word" id="w_224">
-          <span class="alternatives">
-            <ins title="nlp 1.00" class="alt">ἀναμένειν</ins>
           </span>
         </span>
       </span>
@@ -1744,14 +1744,14 @@
             <ins title="nlp 2.00">μιχρολογίας’</ins>
           </span>
         </span>
-        <span lang="grc" title="bbox 1501 2066 1600 2120" class="ocr_word" id="w_333">
+        <span id="w_333_0" class="ocr_word" title="bbox 1501 2066 1600 2120">
           <span class="alternatives">
-            <ins title="nlp 2.00">(τοῖς</ins>
+            <ins class="alt" title="nlp 2.00">(τοῖς</ins>
           </span>
         </span>
-        <span lang="grc" title="bbox 1633 2068 1871 2120" class="ocr_word" id="w_334">
+        <span id="w_333_1" class="ocr_word" title="bbox 1501 2066 1600 2120">
           <span class="alternatives">
-            <ins title="nlp 1.00" class="alt">μικρολόγοις</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -2390,7 +2390,7 @@
         </span>
         <span lang="grc" title="bbox 602 2772 681 2816" class="ocr_word" id="w_459">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ἐγώ</ins>
+            <ins title="nlp 2.00">ἐγώ</ins>
           </span>
         </span>
         <span title="bbox 709 2785 748 2816" class="ocr_word" id="w_460">
@@ -2405,7 +2405,7 @@
         </span>
         <span title="bbox 901 2772 1011 2813" class="ocr_word" id="w_462">
           <span class="alternatives">
-            <ins title="nlp 2.00">cod.)·</ins>
+            <ins title="nlp 2.00">·</ins>
           </span>
         </span>
         <span title="bbox 1038 2785 1068 2805" class="ocr_word" id="w_463">
@@ -2415,7 +2415,7 @@
         </span>
         <span title="bbox 1094 2774 1178 2814" class="ocr_word" id="w_464">
           <span class="alternatives">
-            <ins title="nlp 2.00">(οὔτι</ins>
+            <ins title="nlp 2.00">οὔτι</ins>
           </span>
         </span>
         <span title="bbox 1197 2772 1285 2816" class="ocr_word" id="w_465">
@@ -2552,7 +2552,7 @@
       <span title="bbox 63 2965 1870 3025" class="ocr_line">
         <span title="bbox 63 2967 154 3021" class="ocr_word" id="w_490">
           <span class="alternatives">
-            <ins title="nlp 2.00">(τῶν</ins>
+            <ins title="nlp 2.00">τῶν</ins>
           </span>
         </span>
         <span lang="grc" title="bbox 187 2970 429 3024" class="ocr_word" id="w_491">
@@ -2750,8 +2750,7 @@
         </span>
         <span title="bbox 304 3246 330 3285" class="ocr_word" id="w_528">
           <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">f.</ins>
-            <del title="nlp 0.90">f.</del>
+            <ins title="nlp 2.00">f.</ins>
           </span>
         </span>
         <span title="bbox 350 3246 447 3286" class="ocr_word" id="w_529">
