--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0050.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0050.html
@@ -311,7 +311,7 @@
         </span>
         <span id="w_57" class="ocr_word" title="bbox 1633 858 1696 908" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐκ</ins>
+            <ins title="nlp 2.00">(ἐκ</ins>
           </span>
         </span>
         <span id="w_58" class="ocr_word" title="bbox 1728 871 1949 910" lang="grc">
@@ -1553,9 +1553,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 356 2461 2165 2510">
-        <span id="w_297" class="ocr_word" title="bbox 356 2465 367 2497">
+        <span id="w_297_0" class="ocr_word" title="bbox 356 2465 367 2497">
           <span class="alternatives">
-            <ins title="nlp 2.00">1</ins>
+            <ins class="alt" title="nlp 2.00">1</ins>
+          </span>
+        </span>
+        <span id="w_297_1" class="ocr_word" title="bbox 356 2465 367 2497">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ἀπ</ins>
           </span>
         </span>
         <span id="w_299" class="ocr_word" title="bbox 460 2489 466 2495">
@@ -2240,8 +2245,7 @@
         </span>
         <span id="w_424" class="ocr_word" title="bbox 1283 2932 1326 2964">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">-Ji</ins>
-            <del title="nlp 0.90">-Ji</del>
+            <ins title="nlp 2.00">24</ins>
           </span>
         </span>
         <span id="w_425" class="ocr_word" title="bbox 1352 2934 1477 2978" lang="grc">
@@ -2285,8 +2289,7 @@
         </span>
         <span id="w_432" class="ocr_word" title="bbox 570 2984 633 3017">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Co:</ins>
-            <del title="nlp 0.90">Co:</del>
+            <ins title="nlp 2.00">ἴδη Cc:</ins>
           </span>
         </span>
         <span id="w_433" class="ocr_word" title="bbox 660 2985 736 3018" lang="grc">
@@ -2358,8 +2361,7 @@
         </span>
         <span id="w_445" class="ocr_word" title="bbox 421 3042 486 3082">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">TO)]</ins>
-            <del title="nlp 0.90">TO</del>
+            <ins title="nlp 2.00">τῶ]</ins>
           </span>
         </span>
         <span id="w_446" class="ocr_word" title="bbox 511 3053 549 3073" lang="grc">
