--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0301.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0301.html
@@ -1802,7 +1802,7 @@
         </span>
         <span id="w_319" class="ocr_word" title="bbox 1562 2125 1609 2166" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐξ</ins>
+            <ins title="nlp 2.00">(ἐξ</ins>
           </span>
         </span>
         <span id="w_320" class="ocr_word" title="bbox 1636 2138 1756 2160" lang="grc">
@@ -1812,16 +1812,11 @@
         </span>
         <span id="w_321" class="ocr_word" title="bbox 1771 2137 1898 2160" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πιστευ-</ins>
+            <ins title="nlp 2.00">πιστευόμενος</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 1092 2183 1721 2233">
-        <span id="w_322" class="ocr_word" title="bbox 1092 2199 1210 2233" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">όμενος</ins>
-          </span>
-        </span>
         <span id="w_323" class="ocr_word" title="bbox 1236 2190 1292 2220" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
