--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0140.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0140.html
@@ -1375,16 +1375,11 @@
         </span>
         <span id="w_268" class="ocr_word" title="bbox 1991 1733 2062 1758" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοι-</ins>
+            <ins title="nlp 2.00">τοιαύτη·</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 382 1783 2063 1841">
-        <span id="w_269" class="ocr_word" title="bbox 382 1799 477 1838" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">αύτη•</ins>
-          </span>
-        </span>
         <span id="w_271" class="ocr_word" title="bbox 534 1783 771 1827" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">συντιθέντες</ins>
@@ -1432,16 +1427,11 @@
         </span>
         <span id="w_280" class="ocr_word" title="bbox 1956 1787 2063 1827" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐλάτ-</ins>
+            <ins title="nlp 2.00">ἐλάττονος</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 381 1852 2123 1911">
-        <span id="w_281" class="ocr_word" title="bbox 381 1867 489 1896" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τονος</ins>
-          </span>
-        </span>
         <span id="w_282" class="ocr_word" title="bbox 519 1867 585 1892" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
@@ -1497,9 +1487,9 @@
             <ins class="alt" title="nlp 1.00">αἱ</ins>
           </span>
         </span>
-        <span id="w_293" class="ocr_word" title="bbox 2039 1855 2123 1891" lang="grc">
+        <span id="w_293_0" class="ocr_word" title="bbox 2039 1855 2123 1891">
           <span class="alternatives">
-            <ins title="nlp 2.00">104ν</ins>
+            <ins class="alt" title="nlp 2.00">104v</ins>
           </span>
         </span>
       </span>
