--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0352.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0352.html
@@ -1657,7 +1657,7 @@
         </span>
         <span id="w_328" class="ocr_word" title="bbox 1936 1970 2187 2026" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00"> δηνμοχρατία,</ins>
+            <ins title="nlp 2.00">δηνμοχρατία,</ins>
           </span>
         </span>
       </span>
@@ -2591,7 +2591,7 @@
         </span>
         <span id="w_511" class="ocr_word" title="bbox 1860 3012 1955 3066" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(υἱοὶ</ins>
+            <ins title="nlp 2.00">υἱοὶ</ins>
           </span>
         </span>
         <span id="w_512" class="ocr_word" title="bbox 1987 3027 2057 3065" lang="grc">
