--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0141.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0141.html
@@ -1529,9 +1529,9 @@
             <ins class="alt" title="nlp 1.00">ἐὰν</ins>
           </span>
         </span>
-        <span id="w_295" class="ocr_word" title="bbox 1817 1885 1901 1922">
+        <span id="w_295_0" class="ocr_word" title="bbox 1817 1885 1901 1922">
           <span class="alternatives">
-            <ins title="nlp 2.00">105ν</ins>
+            <ins class="alt" title="nlp 2.00">105v</ins>
           </span>
         </span>
       </span>
