--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0302.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0302.html
@@ -121,16 +121,11 @@
         </span>
         <span id="w_20" class="ocr_word" title="bbox 1051 331 1123 376" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τρία</ins>
+            <ins title="nlp 2.00">σημαίνει</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 411 391 647 436">
-        <span id="w_22" class="ocr_word" title="bbox 411 404 518 436" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">σημαίνει</ins>
-          </span>
-        </span>
         <span id="w_23" class="ocr_word" title="bbox 543 391 647 434">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">53,28</ins>
@@ -258,7 +253,7 @@
         </span>
         <span id="w_46" class="ocr_word" title="bbox 1174 816 1223 838" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τε·</ins>
+            <ins title="nlp 2.00">τε-</ins>
           </span>
         </span>
       </span>
@@ -1153,7 +1148,7 @@
       <span class="ocr_line" title="bbox 1290 328 2171 376">
         <span id="w_207" class="ocr_word" title="bbox 1290 331 1457 376" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">*ἀρετός</ins>
+            <ins title="nlp 2.00">ἀρετός</ins>
           </span>
         </span>
         <span id="w_208" class="ocr_word" title="bbox 1489 330 1604 374">
