--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0353.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0353.html
@@ -1524,7 +1524,7 @@
       <span title="bbox 68 2326 1879 2385" class="ocr_line">
         <span title="bbox 68 2330 221 2385" class="ocr_word" id="w_290">
           <span class="alternatives">
-            <ins title="nlp 2.00">  βιβλίου,</ins>
+            <ins title="nlp 2.00">βιβλίου,</ins>
           </span>
         </span>
         <span lang="grc" title="bbox 253 2330 346 2384" class="ocr_word" id="w_291">
@@ -2022,14 +2022,14 @@
             <ins class="alt" title="nlp 2.00">πολλοῖς</ins>
           </span>
         </span>
-        <span id="w_381_0" class="ocr_word" title="bbox 1739 2808 1783 2861">
+        <span id="w_381_0_0" class="ocr_word" title="bbox 1739 2808 1783 2861">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">(ἤ</ins>
+            <ins class="alt" title="nlp 2.00">(ἢ</ins>
           </span>
         </span>
-        <span id="w_381_1" class="ocr_word" title="bbox 1739 2808 1783 2861">
+        <span id="w_381_0_1" class="ocr_word" title="bbox 1739 2808 1783 2861">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">ἐπὶ</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -2046,8 +2046,7 @@
         </span>
         <span title="bbox 316 2895 396 2922" class="ocr_word" id="w_385">
           <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">om.</ins>
-            <del title="nlp 0.90">om.</del>
+            <ins title="nlp 2.00">om.</ins>
           </span>
         </span>
         <span title="bbox 429 2881 559 2934" class="ocr_word" id="w_386">
@@ -2243,7 +2242,7 @@
         </span>
         <span id="w_423_0" class="ocr_word" title="bbox 1007 3087 1145 3139">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">(θαυμ.—χρησώμεθα]</ins>
+            <ins class="alt" title="nlp 2.00">θαυμ.—χρησώμεθα]</ins>
           </span>
         </span>
         <span id="w_423_1" class="ocr_word" title="bbox 1007 3087 1145 3139">
