--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0278.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0278.html
@@ -464,9 +464,14 @@
             <ins class="alt" title="nlp 1.00">δέκα</ins>
           </span>
         </span>
-        <span id="w_87" class="ocr_word" title="bbox 1164 601 1453 655" lang="grc">
+        <span id="w_87_0" class="ocr_word" title="bbox 1164 601 1453 655">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἑχατοντάρχας</ins>
+            <ins class="alt" title="nlp 2.00">ἑκατοντάρχας</ins>
+          </span>
+        </span>
+        <span id="w_87_1" class="ocr_word" title="bbox 1164 601 1453 655">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_88" class="ocr_word" title="bbox 1475 615 1736 654" lang="grc">
@@ -487,11 +492,6 @@
         <span id="w_91" class="ocr_word" title="bbox 1919 616 1961 640" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὸ</ins>
-          </span>
-        </span>
-        <span id="w_92" class="ocr_word" title="bbox 1994 616 2124 654" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἕτερον</ins>
           </span>
         </span>
       </span>
@@ -707,9 +707,14 @@
             <ins class="alt" title="nlp 2.00">τοῦτο</ins>
           </span>
         </span>
-        <span id="w_133_1" class="ocr_word" title="bbox 433 892 544 918">
+        <span id="w_133_1_0" class="ocr_word" title="bbox 433 892 544 918">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">χατασχευάζει</ins>
+            <ins class="alt" title="nlp 2.00">κατασκευάζει</ins>
+          </span>
+        </span>
+        <span id="w_133_1_1" class="ocr_word" title="bbox 433 892 544 918">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_134" class="ocr_word" title="bbox 889 892 933 917" lang="grc">
@@ -755,11 +760,6 @@
         <span id="w_142" class="ocr_word" title="bbox 1922 890 1991 929" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τῆς</ins>
-          </span>
-        </span>
-        <span id="w_143" class="ocr_word" title="bbox 2024 891 2124 915" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ποιότητος·</ins>
           </span>
         </span>
       </span>
@@ -1019,7 +1019,7 @@
         </span>
         <span id="w_195" class="ocr_word" title="bbox 1163 1220 1274 1274" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οὐδὲ</ins>
+            <ins title="nlp 2.00">(οὐδὲ</ins>
           </span>
         </span>
         <span id="w_196" class="ocr_word" title="bbox 1312 1221 1383 1275" lang="grc">
@@ -1203,9 +1203,9 @@
             <ins class="alt" title="nlp 1.00">λέγεται</ins>
           </span>
         </span>
-        <span id="w_231" class="ocr_word" title="bbox 1947 1443 2122 1481" lang="grc">
+        <span id="w_231_0" class="ocr_word" title="bbox 1947 1443 2122 1481">
           <span class="alternatives">
-            <ins title="nlp 2.00">γραμματιχὴ</ins>
+            <ins class="alt" title="nlp 2.00">γραμματικὴ</ins>
           </span>
         </span>
       </span>
@@ -1369,9 +1369,14 @@
             <ins class="alt" title="nlp 1.00">ἡ</ins>
           </span>
         </span>
-        <span id="w_264" class="ocr_word" title="bbox 967 1651 1227 1690" lang="grc">
+        <span id="w_264_0" class="ocr_word" title="bbox 967 1651 1227 1690">
           <span class="alternatives">
-            <ins title="nlp 2.00">γραμματιχή.</ins>
+            <ins class="alt" title="nlp 2.00">γραμματική.</ins>
+          </span>
+        </span>
+        <span id="w_264_1" class="ocr_word" title="bbox 967 1651 1227 1690">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_265" class="ocr_word" title="bbox 1291 1636 1351 1675" lang="grc">
@@ -1402,11 +1407,6 @@
         <span id="w_270" class="ocr_word" title="bbox 1962 1652 2017 1676" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὅτι</ins>
-          </span>
-        </span>
-        <span id="w_271" class="ocr_word" title="bbox 2041 1638 2124 1679" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πῶς</ins>
           </span>
         </span>
       </span>
@@ -1647,9 +1647,14 @@
             <ins class="alt" title="nlp 2.00">ἐπάνω</ins>
           </span>
         </span>
-        <span id="w_317_1" class="ocr_word" title="bbox 957 1913 1088 1952">
+        <span id="w_317_1_0" class="ocr_word" title="bbox 957 1913 1088 1952">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">χατηγορεῖται,</ins>
+            <ins class="alt" title="nlp 2.00">κατηγορεῖται,</ins>
+          </span>
+        </span>
+        <span id="w_317_1_1" class="ocr_word" title="bbox 957 1913 1088 1952">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_318" class="ocr_word" title="bbox 1446 1913 1509 1952" lang="grc">
@@ -1675,11 +1680,6 @@
         <span id="w_322" class="ocr_word" title="bbox 1993 1929 2025 1952" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τί</ins>
-          </span>
-        </span>
-        <span id="w_323" class="ocr_word" title="bbox 2058 1929 2122 1953" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οὖν</ins>
           </span>
         </span>
       </span>
@@ -1709,9 +1709,14 @@
             <ins class="alt" title="nlp 2.00">επιστημης</ins>
           </span>
         </span>
-        <span id="w_328_1" class="ocr_word" title="bbox 820 1995 1035 2035">
+        <span id="w_328_1_0" class="ocr_word" title="bbox 820 1995 1035 2035">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">χατηγορουμενα</ins>
+            <ins class="alt" title="nlp 2.00">κατηγορουμενα</ins>
+          </span>
+        </span>
+        <span id="w_328_1_1" class="ocr_word" title="bbox 820 1995 1035 2035">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_329" class="ocr_word" title="bbox 1429 1997 1496 2035" lang="grc">
@@ -1727,11 +1732,6 @@
         <span id="w_331" class="ocr_word" title="bbox 1837 1997 1880 2021" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">οὐ</ins>
-          </span>
-        </span>
-        <span id="w_332" class="ocr_word" title="bbox 1914 1997 2107 2037" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κατηγορῇ</ins>
           </span>
         </span>
       </span>
@@ -1786,9 +1786,9 @@
             <ins class="alt" title="nlp 1.00">ποιότης</ins>
           </span>
         </span>
-        <span id="w_343" class="ocr_word" title="bbox 1913 2066 2121 2105" lang="grc">
+        <span id="w_343_0" class="ocr_word" title="bbox 1913 2066 2121 2105">
           <span class="alternatives">
-            <ins title="nlp 2.00">χατηγορηθήσεται</ins>
+            <ins class="alt" title="nlp 2.00">κατηγορηθήσεται</ins>
           </span>
         </span>
       </span>
@@ -1910,14 +1910,14 @@
             <ins class="alt" title="nlp 1.00">νοούμενον.</ins>
           </span>
         </span>
-        <span id="w_369_0" class="ocr_word" title="bbox 1979 2191 2041 2229">
+        <span id="w_369_0_0" class="ocr_word" title="bbox 1979 2191 2041 2229">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">χαὶ</ins>
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_369_1" class="ocr_word" title="bbox 1979 2191 2041 2229">
+        <span id="w_369_0_1" class="ocr_word" title="bbox 1979 2191 2041 2229">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">ὡς</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1957,9 +1957,14 @@
             <ins class="alt" title="nlp 2.00">τὸ</ins>
           </span>
         </span>
-        <span id="w_376_1" class="ocr_word" title="bbox 1311 2259 1351 2298">
+        <span id="w_376_1_0" class="ocr_word" title="bbox 1311 2259 1351 2298">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">χατηγορούμενον</ins>
+            <ins class="alt" title="nlp 2.00">κατηγορούμενον</ins>
+          </span>
+        </span>
+        <span id="w_376_1_1" class="ocr_word" title="bbox 1311 2259 1351 2298">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_377" class="ocr_word" title="bbox 1737 2272 1856 2311" lang="grc">
@@ -1970,11 +1975,6 @@
         <span id="w_378" class="ocr_word" title="bbox 1888 2257 1984 2298" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">κατὰ</ins>
-          </span>
-        </span>
-        <span id="w_379" class="ocr_word" title="bbox 2012 2272 2122 2312" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">φύσιν</ins>
           </span>
         </span>
       </span>
@@ -2183,14 +2183,14 @@
             <ins class="alt" title="nlp 1.00">ἐχρῆν,</ins>
           </span>
         </span>
-        <span id="w_420" class="ocr_word" title="bbox 1919 2462 2024 2518" lang="grc">
+        <span id="w_420_0" class="ocr_word" title="bbox 1919 2462 2024 2518">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;ἀλλ᾿</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;ἀλλ’</ins>
           </span>
         </span>
-        <span id="w_421" class="ocr_word" title="bbox 2055 2480 2123 2504" lang="grc">
+        <span id="w_420_1" class="ocr_word" title="bbox 1919 2462 2024 2518">
           <span class="alternatives">
-            <ins title="nlp 2.00">οὐχ</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -2205,9 +2205,14 @@
             <ins class="alt" title="nlp 1.00">ἀπορεῖν</ins>
           </span>
         </span>
-        <span id="w_424" class="ocr_word" title="bbox 629 2531 770 2587" lang="grc">
+        <span id="w_424_0" class="ocr_word" title="bbox 629 2531 770 2587">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐχρῆν&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">ἐχρῆν&amp;#x003Ε;</ins>
+          </span>
+        </span>
+        <span id="w_424_1" class="ocr_word" title="bbox 629 2531 770 2587">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_425" class="ocr_word" title="bbox 801 2532 858 2572" lang="grc">
@@ -2255,11 +2260,6 @@
             <ins class="alt" title="nlp 1.00">ἀνάγεσθαι,</ins>
           </span>
         </span>
-        <span id="w_434" class="ocr_word" title="bbox 2069 2533 2121 2572" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ὧν</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 443 2601 2121 2657">
         <span id="w_435" class="ocr_word" title="bbox 443 2619 467 2656" lang="grc">
@@ -2274,7 +2274,7 @@
         </span>
         <span id="w_437" class="ocr_word" title="bbox 646 2601 725 2655" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οὐ]</ins>
+            <ins title="nlp 2.00">[οὐ]</ins>
           </span>
         </span>
         <span id="w_438" class="ocr_word" title="bbox 760 2617 854 2655" lang="grc">
@@ -2327,14 +2327,14 @@
             <ins class="alt" title="nlp 1.00">μὴ</ins>
           </span>
         </span>
-        <span id="w_448" class="ocr_word" title="bbox 1964 2603 2026 2643" lang="grc">
+        <span id="w_448_0" class="ocr_word" title="bbox 1964 2603 2026 2643">
           <span class="alternatives">
-            <ins title="nlp 2.00">χαὶ</ins>
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_449" class="ocr_word" title="bbox 2050 2602 2121 2642" lang="grc">
+        <span id="w_448_1" class="ocr_word" title="bbox 1964 2603 2026 2643">
           <span class="alternatives">
-            <ins title="nlp 2.00">ὑπὸ</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -2826,9 +2826,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 375 3099 2184 3148">
-        <span id="w_540" class="ocr_word" title="bbox 375 3115 534 3148" lang="grc">
+        <span id="w_540_0" class="ocr_word" title="bbox 375 3115 534 3148">
           <span class="alternatives">
-            <ins title="nlp 2.00">χαηγορ.</ins>
+            <ins class="alt" title="nlp 2.00">κατηγορ.</ins>
+          </span>
+        </span>
+        <span id="w_540_1" class="ocr_word" title="bbox 375 3115 534 3148">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_541" class="ocr_word" title="bbox 561 3104 680 3136">
@@ -2899,12 +2904,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">ei</ins>
             <del title="nlp 0.90">ei</del>
-          </span>
-        </span>
-        <span id="w_554" class="ocr_word" title="bbox 2113 3099 2184 3133">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">add.</ins>
-            <del title="nlp 0.90">add.</del>
           </span>
         </span>
       </span>
