--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0354.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0354.html
@@ -205,7 +205,7 @@
         </span>
         <span id="w_36" class="ocr_word" title="bbox 647 441 744 482">
           <span class="alternatives">
-            <ins title="nlp 2.00">223ν</ins>
+            <ins title="nlp 2.00">ν</ins>
           </span>
         </span>
         <span id="w_37" class="ocr_word" title="bbox 781 441 908 482">
@@ -233,7 +233,7 @@
         </span>
         <span id="w_41" class="ocr_word" title="bbox 1240 440 1311 481">
           <span class="alternatives">
-            <ins title="nlp 2.00">13ν</ins>
+            <ins title="nlp 2.00">ν</ins>
           </span>
         </span>
         <span id="w_42" class="ocr_word" title="bbox 1334 439 1523 494">
@@ -431,7 +431,7 @@
         </span>
         <span id="w_79" class="ocr_word" title="bbox 575 719 804 774" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(τελευτέως</ins>
+            <ins title="nlp 2.00">τελευτέως</ins>
           </span>
         </span>
         <span id="w_80" class="ocr_word" title="bbox 836 718 967 772">
@@ -893,7 +893,7 @@
         </span>
         <span id="w_168" class="ocr_word" title="bbox 655 1206 752 1247">
           <span class="alternatives">
-            <ins title="nlp 2.00">231ν</ins>
+            <ins title="nlp 2.00">ν</ins>
           </span>
         </span>
         <span id="w_169" class="ocr_word" title="bbox 795 1206 920 1247">
@@ -1032,7 +1032,7 @@
         </span>
         <span id="w_197" class="ocr_word" title="bbox 829 1344 916 1398" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(τοῦ</ins>
+            <ins title="nlp 2.00">τοῦ</ins>
           </span>
         </span>
         <span id="w_198" class="ocr_word" title="bbox 949 1359 1028 1386">
