--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0142.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0142.html
@@ -1104,9 +1104,9 @@
             <ins class="alt" title="nlp 1.00">·ἀλλ’</ins>
           </span>
         </span>
-        <span id="w_213" class="ocr_word" title="bbox 2059 1381 2142 1418">
+        <span id="w_213_0" class="ocr_word" title="bbox 2059 1381 2142 1418">
           <span class="alternatives">
-            <ins title="nlp 2.00">106ν</ins>
+            <ins class="alt" title="nlp 2.00">106v</ins>
           </span>
         </span>
       </span>
