--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0303.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0303.html
@@ -175,7 +175,7 @@
       <span class="ocr_line" title="bbox 83 709 956 761">
         <span id="w_29" class="ocr_word" title="bbox 83 718 293 761" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">*ἀτομεῖν.</ins>
+            <ins title="nlp 2.00">ἀτομεῖν.</ins>
           </span>
         </span>
         <span id="w_30" class="ocr_word" title="bbox 344 715 547 758" lang="grc">
@@ -606,21 +606,11 @@
         </span>
         <span id="w_106" class="ocr_word" title="bbox 872 1827 962 1871" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">συγ-</ins>
+            <ins title="nlp 2.00">(συγγράμματα),</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 159 1886 964 1935">
-        <span id="w_107" class="ocr_word" title="bbox 159 1889 350 1935" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γράμματα)</ins>
-          </span>
-        </span>
-        <span id="w_108" class="ocr_word" title="bbox 361 1913 370 1928">
-          <span class="alternatives">
-            <ins title="nlp 2.00">,</ins>
-          </span>
-        </span>
         <span id="w_109" class="ocr_word" title="bbox 407 1888 427 1920" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἁ</ins>
@@ -1831,7 +1821,7 @@
         </span>
         <span id="w_330" class="ocr_word" title="bbox 1623 2410 1797 2452" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">191,6 Αἰγύπτιοι εὐρον</ins>
+            <ins title="nlp 2.00">Αἰγύπτιοι εὐρον</ins>
           </span>
         </span>
       </span>
