--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0401.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0401.html
@@ -973,7 +973,7 @@
         </span>
         <span id="w_189" class="ocr_word" title="bbox 1107 1279 1224 1333" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">αὕτη</ins>
+            <ins title="nlp 2.00">(αὕτη</ins>
           </span>
         </span>
         <span id="w_190" class="ocr_word" title="bbox 1262 1293 1333 1331" lang="grc">
@@ -1211,7 +1211,7 @@
         </span>
         <span id="w_236" class="ocr_word" title="bbox 652 1560 768 1614" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">αὕτη</ins>
+            <ins title="nlp 2.00">(αὕτη</ins>
           </span>
         </span>
         <span id="w_237" class="ocr_word" title="bbox 799 1575 871 1612" lang="grc">
@@ -2543,7 +2543,7 @@
       <span class="ocr_line" title="bbox 110 3209 1881 3265">
         <span id="w_489" class="ocr_word" title="bbox 110 3221 155 3255" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">30 αὐτὸς]</ins>
+            <ins title="nlp 2.00">αὐτὸς]</ins>
           </span>
         </span>
         <span id="w_490" class="ocr_word" title="bbox 323 3232 367 3254">
