--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0143.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0143.html
@@ -70,7 +70,7 @@
       <span class="ocr_line" title="bbox 884 361 1151 418">
         <span id="w_10" class="ocr_word" title="bbox 884 361 1044 418" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;Πρᾶξις μ΄&amp;#x003Ε;.</ins>
+            <ins title="nlp 2.00">Ε;.</ins>
           </span>
         </span>
       </span>
@@ -482,7 +482,7 @@
         </span>
         <span id="w_89" class="ocr_word" title="bbox 1626 1007 1680 1059" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">εἰ</ins>
+            <ins title="nlp 2.00">(εἰ</ins>
           </span>
         </span>
         <span id="w_90" class="ocr_word" title="bbox 1701 1022 1772 1062" lang="grc">
@@ -723,9 +723,9 @@
             <ins title="nlp 2.00">ὑπαλλήλων,</ins>
           </span>
         </span>
-        <span id="w_138" class="ocr_word" title="bbox 1832 1281 1914 1317">
+        <span id="w_138_0" class="ocr_word" title="bbox 1832 1281 1914 1317">
           <span class="alternatives">
-            <ins title="nlp 2.00">107ν</ins>
+            <ins class="alt" title="nlp 2.00">107v</ins>
           </span>
         </span>
       </span>
