--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0402.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0402.html
@@ -2188,7 +2188,7 @@
         </span>
         <span id="w_422" class="ocr_word" title="bbox 833 2666 918 2721" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
+            <ins title="nlp 2.00">(καὶ</ins>
           </span>
         </span>
         <span id="w_423" class="ocr_word" title="bbox 949 2682 1019 2720" lang="grc">
