--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0144.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0144.html
@@ -552,9 +552,9 @@
             <ins title="nlp 2.00">ἀντικατηγορεῖται</ins>
           </span>
         </span>
-        <span id="w_109" class="ocr_word" title="bbox 2035 728 2118 765">
+        <span id="w_109_0" class="ocr_word" title="bbox 2035 728 2118 765">
           <span class="alternatives">
-            <ins title="nlp 2.00">108ν</ins>
+            <ins class="alt" title="nlp 2.00">108v</ins>
           </span>
         </span>
       </span>
