--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0304.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0304.html
@@ -330,12 +330,17 @@
       <span class="ocr_line" title="bbox 302 972 1121 1024">
         <span id="w_57" class="ocr_word" title="bbox 302 977 345 1023" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">*γραμματικότης</ins>
+            <ins title="nlp 2.00">γραμματικότης</ins>
           </span>
         </span>
-        <span id="w_58" class="ocr_word" title="bbox 358 990 438 1024" lang="grc">
+        <span id="w_58_0" class="ocr_word" title="bbox 358 990 438 1024">
           <span class="alternatives">
-            <ins title="nlp 2.00">(οὐχ εὕρηται)</ins>
+            <ins class="alt" title="nlp 2.00">(οὐχ</ins>
+          </span>
+        </span>
+        <span id="w_58_1" class="ocr_word" title="bbox 358 990 438 1024">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">εὕρηται)</ins>
           </span>
         </span>
         <span id="w_59" class="ocr_word" title="bbox 994 972 1121 1015">
@@ -499,9 +504,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 303 1444 855 1495">
-        <span id="w_89" class="ocr_word" title="bbox 303 1446 476 1495" lang="grc">
+        <span id="w_89_0" class="ocr_word" title="bbox 303 1446 476 1495">
           <span class="alternatives">
-            <ins title="nlp 2.00">*γύναιξ</ins>
+            <ins class="alt" title="nlp 2.00">*γύναιξ</ins>
+          </span>
+        </span>
+        <span id="w_89_1" class="ocr_word" title="bbox 303 1446 476 1495">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_90" class="ocr_word" title="bbox 503 1449 583 1488">
@@ -513,11 +523,6 @@
         <span id="w_91" class="ocr_word" title="bbox 608 1445 704 1488">
           <span class="alternatives">
             <ins title="nlp 2.00">ficta)</ins>
-          </span>
-        </span>
-        <span id="w_92" class="ocr_word" title="bbox 731 1444 855 1487">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">211,31</ins>
           </span>
         </span>
       </span>
@@ -778,9 +783,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 310 2742 583 2790">
-        <span id="w_137" class="ocr_word" title="bbox 310 2742 457 2790" lang="grc">
+        <span id="w_137_0" class="ocr_word" title="bbox 310 2742 457 2790">
           <span class="alternatives">
-            <ins title="nlp 2.00">*δεχάς 25,21</ins>
+            <ins class="alt" title="nlp 2.00">*δεχάς</ins>
+          </span>
+        </span>
+        <span id="w_137_1" class="ocr_word" title="bbox 310 2742 457 2790">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">25,21</ins>
           </span>
         </span>
       </span>
