--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0357.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0357.html
@@ -92,9 +92,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 837 1302 1120 1360">
-        <span id="w_15" class="ocr_word" title="bbox 837 1302 1030 1358" lang="grc">
+        <span id="w_15_0" class="ocr_word" title="bbox 837 1302 1030 1358">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;Πρᾶξιςά&amp;#x003C;.</ins>
+            <ins class="alt" title="nlp 2.00">&lt;Πρᾶξις</ins>
+          </span>
+        </span>
+        <span id="w_15_1" class="ocr_word" title="bbox 837 1302 1030 1358">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ά&gt;.</ins>
           </span>
         </span>
       </span>
@@ -1434,7 +1439,7 @@
         </span>
         <span id="w_269" class="ocr_word" title="bbox 1668 2940 1717 2979" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(δὲ</ins>
+            <ins title="nlp 2.00">δὲ</ins>
           </span>
         </span>
         <span id="w_270" class="ocr_word" title="bbox 1743 2938 1784 2981">
